log
Fri 14 Apr 2023 01:10:04 AM UTC: 
 tests:  0|6
total_score: 0/70
b827cdd
Fri 14 Apr 2023 01:12:46 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
201af5a
Fri 14 Apr 2023 01:13:59 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
5c21cb2
Fri 14 Apr 2023 01:15:12 AM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
7723428
Fri 14 Apr 2023 01:16:49 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
test.c: In function ‘createMap’:
hashmap.c:56:7: error: ‘*mapa.buckets’ is used uninitialized [-Werror=uninitialized]
   56 |   mapa->buckets[0] = NULL;
      |   ~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a7acf93
Fri 14 Apr 2023 01:19:04 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
04ba391
Fri 14 Apr 2023 01:19:11 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
30e04d4
Fri 14 Apr 2023 01:19:22 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:55:13: error: unused variable ‘mapa’ [-Werror=unused-variable]
   55 |   HashMap * mapa = (HashMap *) malloc(sizeof(HashMap));
      |             ^~~~
hashmap.c:61:1: error: control reaches end of non-void function [-Werror=return-type]
   61 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
86d8466
Fri 14 Apr 2023 01:19:31 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
236a0de
Fri 14 Apr 2023 01:19:43 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
f17cb64
Fri 14 Apr 2023 01:21:13 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
09b6349
Fri 14 Apr 2023 01:21:32 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
test.c: In function ‘createMap’:
hashmap.c:56:7: error: ‘*mapa.buckets’ is used uninitialized [-Werror=uninitialized]
   56 |   mapa->buckets[capacity] = NULL;
      |   ~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
498958e
Fri 14 Apr 2023 01:22:34 AM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:3: error: conversion to non-scalar type requested
   56 |   Pair buckets = (Pair) malloc(sizeof(Pair));
      |   ^~~~
hashmap.c:56:8: error: unused variable ‘buckets’ [-Werror=unused-variable]
   56 |   Pair buckets = (Pair) malloc(sizeof(Pair));
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2cddd50
Fri 14 Apr 2023 01:23:00 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   56 |   Pair mapa->buckets = (Pair) malloc(sizeof(Pair));
      |            ^~
hashmap.c:56:12: error: expected expression before ‘->’ token
hashmap.c:56:12: error: conversion to non-scalar type requested
Compilation failed
44d1817
Fri 14 Apr 2023 01:23:29 AM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
4d6b4bd
Fri 14 Apr 2023 01:25:24 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
test.c: In function ‘createMap’:
hashmap.c:56:7: error: ‘*mapa.buckets’ is used uninitialized [-Werror=uninitialized]
   56 |   mapa->buckets[0] = NULL;
      |   ~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e1fcab1
Fri 14 Apr 2023 01:26:46 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:10: error: unused variable ‘buckets’ [-Werror=unused-variable]
   56 |   Pair * buckets = (Pair *) malloc(sizeof(Pair));
      |          ^~~~~~~
hashmap.c:57:7: error: ‘*mapa.buckets’ is used uninitialized [-Werror=uninitialized]
   57 |   mapa->buckets[0] = NULL;
      |   ~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ae4e55c
Fri 14 Apr 2023 01:27:02 AM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
925fb81
Fri 14 Apr 2023 01:27:49 AM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:57:9: error: ‘*mapa.buckets’ may be used uninitialized [-Werror=maybe-uninitialized]
   57 |     mapa->buckets[i] = NULL;
      |     ~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3da76ec
Fri 14 Apr 2023 01:29:48 AM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:57:9: error: ‘*mapa.buckets’ may be used uninitialized [-Werror=maybe-uninitialized]
   57 |     mapa->buckets[i] = NULL;
      |     ~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d65a646
Fri 14 Apr 2023 01:31:04 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:57:16: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   57 |     Pair * mapa->buckets[i] = (Pair *) malloc(sizeof(Pair));
      |                ^~
hashmap.c:57:16: error: expected expression before ‘->’ token
Compilation failed
c04b5c4
Fri 14 Apr 2023 01:31:14 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:57:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   57 |     Pair  mapa->buckets[i] = (Pair *) malloc(sizeof(Pair));
      |               ^~
hashmap.c:57:15: error: expected expression before ‘->’ token
Compilation failed
7b12963
Fri 14 Apr 2023 01:31:23 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:57:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   57 |     Pair  mapa->buckets[i] = (Pair) malloc(sizeof(Pair));
      |               ^~
hashmap.c:57:15: error: expected expression before ‘->’ token
hashmap.c:57:15: error: conversion to non-scalar type requested
Compilation failed
de45446
Fri 14 Apr 2023 01:31:31 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:57:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘.’ token
   57 |     Pair  mapa.buckets[i] = (Pair) malloc(sizeof(Pair));
      |               ^
hashmap.c:57:15: error: expected expression before ‘.’ token
hashmap.c:57:15: error: conversion to non-scalar type requested
Compilation failed
2d1540e
Fri 14 Apr 2023 01:32:45 AM UTC: 
 hashmap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
82412aa
Fri 14 Apr 2023 01:39:26 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
0fb07c6
Fri 14 Apr 2023 01:39:41 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 20/70
470b522
Fri 14 Apr 2023 01:42:42 AM UTC: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:9: error: ‘true’ undeclared (first use in this function)
   45 |   while(true){
      |         ^~~~
hashmap.c:7:1: note: ‘true’ is defined in header ‘<stdbool.h>’; did you forget to ‘#include <stdbool.h>’?
    6 | #include "hashmap.h"
  +++ |+#include <stdbool.h>
    7 | 
hashmap.c:45:9: note: each undeclared identifier is reported only once for each function it appears in
   45 |   while(true){
      |         ^~~~
Compilation failed
1fa148d
Fri 14 Apr 2023 01:43:11 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
63236b7
Fri 14 Apr 2023 01:44:33 AM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:50:5: error: this ‘else’ clause does not guard... [-Werror=misleading-indentation]
   50 |     else
      |     ^~~~
hashmap.c:52:7: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘else’
   52 |       if(aux > map->capacity)
      |       ^~
cc1: all warnings being treated as errors
Compilation failed
e367776
Fri 14 Apr 2023 01:45:07 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|5
total_score: 20/70
8e70485
Fri 14 Apr 2023 01:45:39 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:50:5: error: this ‘else’ clause does not guard... [-Werror=misleading-indentation]
   50 |     else
      |     ^~~~
hashmap.c:52:7: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘else’
   52 |       if(aux > map->capacity)
      |       ^~
cc1: all warnings being treated as errors
Compilation failed
bdab7c4
Fri 14 Apr 2023 01:46:04 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:50:5: error: this ‘else’ clause does not guard... [-Werror=misleading-indentation]
   50 |     else
      |     ^~~~
hashmap.c:52:7: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘else’
   52 |       if(aux > map->capacity)
      |       ^~
cc1: all warnings being treated as errors
Compilation failed
8012b14
